--- a/spiderweb2/WebContent/Css/main.css
+++ b/spiderweb2/WebContent/Css/main.css
@@ -18,6 +18,7 @@ body,html{
 	font-size: 20px;
 	color: #fff;
 	font-family: 'comic sans ms', sans-serif;
+	margin-top: 10px;
 }
 .spanNameDiv{
 	float: left;
@@ -614,4 +615,16 @@ body,html{
 	font-size: 12px;
 	font-style: oblique;
 	color: #969696;
+}
+
+/*  注册成功页面样式    */
+.success-warp{
+	height: 100%;
+	display: block;
+	float: none;
+	margin-left: auto;
+	margin-right: auto;
+}
+.success-warp h3{
+	margin-top: 60px;
 }
