--- a/spiderweb2/WebContent/Css/main.css
+++ b/spiderweb2/WebContent/Css/main.css
@@ -628,3 +628,38 @@ body,html{
 .success-warp h3{
 	margin-top: 60px;
 }
+
+
+/*  激活成功页面样式  */
+.Verify-context{
+	height: auto;
+	display: block;
+	float: none;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 20px;
+}
+.dui-icon{
+	width: 200px;
+	height: 32px;
+	background-image: url(../Img/su.png);
+	background-repeat: no-repeat;
+	display: block;
+	padding-left: 40px;
+	float: none;
+	margin-left: auto;
+	margin-right: auto;
+}
+.dao-Time{
+	width: 300px;
+	height: 32px;
+	display: block;
+	background-image: url(../Img/air.png);
+	background-repeat: no-repeat;
+	padding-left: 40px;
+	padding-top: 10px;
+	float: none;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 30px;
+}
