--- a/spiderweb2/WebContent/Css/main.css
+++ b/spiderweb2/WebContent/Css/main.css
@@ -413,11 +413,13 @@ body,html{
 }
 .ad-frist{
 	height: 350px;
-	border: 1px solid #00ff00;
+	border-radius: 5px;
+	background: #fff;
 }
 .ad-second{
 	height: 350px;
-	border: 1px solid #00ff00;
+	border-radius: 5px;
+	background: #fff;
 	margin-top: 20px;
 }
 .div-bottom{
@@ -519,11 +521,13 @@ body,html{
 }
 .One-ad-1{
 	height: auto;
-	border: 1px solid #ff0000;
+	border-radius: 5px;
+	background: #fff;
 }
 .One-ad-2{
 	height: auto;
-	border: 1px solid #00ff00;
+	border-radius: 5px;
+	background: #fff;
 }
 
 .Comment-wrap{
@@ -662,4 +666,53 @@ body,html{
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 30px;
+}
+
+/*  资源链接共享页  */
+.L-adDiv-One{
+	height: 380px;
+	border-radius: 5px;
+	background: #fff;
+}
+.L-adDiv-Two{
+	height: 380px;
+	border-radius: 5px;
+	background: #fff;
+	margin-top: 30px;
+}
+.R-adDiv-One{
+	height: 380px;
+	border-radius: 5px;
+	background: #fff;
+}
+.R-adDiv-Two{
+	height: 380px;
+	border-radius: 5px;
+	background: #fff;
+	margin-top: 30px;
+}
+.Link-Context{
+	border-radius: 5px;
+	background: #fff;
+}
+.Link-Context-Wrap{
+	margin-top: 30px;
+	margin-bottom: 30px;
+}
+.Link-Context{
+	height: 680px;
+	background: #fff;
+	border-radius: 5px;
+	padding-top: 20px;
+}
+.Link-Context span{
+	color: #778899;
+}
+.Link-warp{
+	width: 100%;
+	height: 80px;
+	border: 0.8px solid #EEEE00;
+	background: #FAFAD2;
+	text-align: center;
+	line-height: 80px;
 }
