--- a/kuqi-Top/kuqi-Web/.settings/org.eclipse.wst.common.component
+++ b/kuqi-Top/kuqi-Web/.settings/org.eclipse.wst.common.component
@@ -11,6 +11,9 @@
         <dependent-module archiveName="kuqi-Dao-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/kuqi-Dao/kuqi-Dao">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="kuqi-Util-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/kuqi-Util/kuqi-Util">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="kuqi-Web"/>
         <property name="java-output-path" value="/kuqi-Web/target/classes"/>
     </wb-module>
